--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assignment_1",
   "version": "1.0.0",
   "description": "1st assignment of course8th from internshala",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
